--- a/CHIPSApp/res/layout/application_hub.xml
+++ b/CHIPSApp/res/layout/application_hub.xml
@@ -10,7 +10,7 @@
         android:layout_height="46dp" >
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageSettings"
             android:layout_width="44dp"
             android:layout_height="match_parent"
             android:layout_x="3dp"
@@ -18,7 +18,7 @@
             android:src="@drawable/settings" />
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imagePlus"
             android:layout_width="33dp"
             android:layout_height="33dp"
             android:layout_x="276dp"
@@ -33,7 +33,7 @@
         android:layout_height="match_parent" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/imageInventory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_x="28dp"
@@ -41,7 +41,7 @@
             android:src="@drawable/inventory" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imageShopping"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_x="184dp"
@@ -49,7 +49,7 @@
             android:src="@drawable/shopping" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageCalendar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_x="84dp"
@@ -64,7 +64,7 @@
             android:layout_y="0dp" >
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imageBubbleToday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_x="14dp"
