--- a/CHIPSApp/res/layout/inventory.xml
+++ b/CHIPSApp/res/layout/inventory.xml
@@ -10,7 +10,7 @@
         android:layout_height="46dp" >
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageHome"
             android:layout_width="44dp"
             android:layout_height="match_parent"
             android:layout_x="3dp"
@@ -18,7 +18,7 @@
             android:src="@drawable/home" />
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imagePlus"
             android:layout_width="33dp"
             android:layout_height="33dp"
             android:layout_x="276dp"
@@ -40,7 +40,7 @@
             android:layout_y="8dp" >
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/imageFoodInvetory1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_x="12dp"
@@ -48,7 +48,7 @@
                 android:src="@drawable/bubble_smal" />
 
             <ImageView
-                android:id="@+id/ImageView01"
+                android:id="@+id/imageFoodInvetory2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_x="12dp"
@@ -58,7 +58,7 @@
         </AbsoluteLayout>
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/imageAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_x="60dp"
@@ -66,12 +66,12 @@
             android:src="@drawable/add" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageScan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_x="180dp"
+            android:layout_x="184dp"
             android:layout_y="360dp"
-            android:src="@drawable/purchase_all" />
+            android:src="@drawable/scan" />
 
     </AbsoluteLayout>
 
