--- a/CHIPSApp/res/layout/preferences.xml
+++ b/CHIPSApp/res/layout/preferences.xml
@@ -138,7 +138,7 @@
             android:orientation="vertical" >
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/imageSave"
                 android:layout_width="97dp"
                 android:layout_height="97dp"
                 android:layout_gravity="center"
