--- a/CHIPSApp/res/layout/application_hub.xml
+++ b/CHIPSApp/res/layout/application_hub.xml
@@ -1,77 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
-    <AbsoluteLayout
-        android:id="@+id/absoluteLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="46dp" >
-
-        <ImageView
-            android:id="@+id/imageSettings"
-            android:layout_width="44dp"
-            android:layout_height="match_parent"
-            android:layout_x="3dp"
-            android:layout_y="-1dp"
-            android:src="@drawable/settings" />
-
-        <ImageView
-            android:id="@+id/imagePlus"
-            android:layout_width="33dp"
-            android:layout_height="33dp"
-            android:layout_x="276dp"
-            android:layout_y="6dp"
-            android:src="@drawable/plus" />
-
-    </AbsoluteLayout>
-
-    <AbsoluteLayout
-        android:id="@+id/absoluteLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <ImageView
-            android:id="@+id/imageInventory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_x="28dp"
-            android:layout_y="323dp"
-            android:src="@drawable/inventory" />
-
-        <ImageView
-            android:id="@+id/imageShopping"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_x="184dp"
-            android:layout_y="322dp"
-            android:src="@drawable/shopping" />
-
-        <ImageView
-            android:id="@+id/imageCalendar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_x="84dp"
-            android:layout_y="175dp"
-            android:src="@drawable/calendar" />
-
-        <AbsoluteLayout
-            android:id="@+id/absoluteLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="165dp"
-            android:layout_x="0dp"
-            android:layout_y="0dp" >
-
-            <ImageView
-                android:id="@+id/imageBubbleToday"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_x="14dp"
-                android:layout_y="16dp"
-                android:src="@drawable/bubble_today" />
-        </AbsoluteLayout>
-
-    </AbsoluteLayout>
-
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:orientation="vertical"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/applicationHubTopBar">
+        <ImageView android:src="@drawable/settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/applicationHubSettingsButton"></ImageView>
+        <ImageView android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"></ImageView>
+        <ImageView android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/applicationHubCreateMealsButton"></ImageView>
+    </LinearLayout>
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center" android:layout_weight="1" android:id="@+id/mealDisplay">
+        <ImageView android:src="@drawable/bubble_today" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/mealDisplayBubble"></ImageView>
+    </LinearLayout>
+    <ImageView android:src="@drawable/calendar" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:id="@+id/calendarButton"></ImageView>
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:id="@+id/bottomButtonGroup">
+        <ImageView android:src="@drawable/inventory" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/inventoryButton"></ImageView>
+        <ImageView android:src="@drawable/shopping" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/shoppingButton"></ImageView>
+    </LinearLayout>
+    
 </LinearLayout>
