--- a/CHIPSApp/res/layout/preferences.xml
+++ b/CHIPSApp/res/layout/preferences.xml
@@ -9,13 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="46dp" >
 
-        <ImageView
+        <Button
             android:id="@+id/imageHome"
             android:layout_width="44dp"
             android:layout_height="match_parent"
             android:layout_x="3dp"
             android:layout_y="-1dp"
-            android:src="@drawable/home" />
+            android:background="@drawable/home" />
 
         <ImageView
             android:id="@+id/imagePlus"
