Added image change on press

--- a/CHIPSApp/res/layout/inventory.xml
+++ b/CHIPSApp/res/layout/inventory.xml
@@ -15,21 +15,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/inventoryBottomButtonGroup">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imageAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_x="60dp"
             android:layout_y="360dp"
-            android:src="@drawable/add" android:layout_weight="1"/>
+            android:src="@drawable/add_button" android:layout_weight="1"
+            android:background="@android:color/transparent"/>
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imageScan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_x="184dp"
             android:layout_y="360dp"
-            android:src="@drawable/scan" android:layout_weight="1"/>
+            android:src="@drawable/scan_button" android:layout_weight="1"
+            android:background="@android:color/transparent"/>
 
     </LinearLayout>
 
