--- a/CHIPSApp/res/layout/shopping_list.xml
+++ b/CHIPSApp/res/layout/shopping_list.xml
@@ -15,21 +15,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:id="@+id/shoppingListBottomButtonGroup">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imagePurchase"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_x="60dp"
             android:layout_y="360dp"
-            android:src="@drawable/purchase" android:layout_weight="1"/>
+            android:src="@drawable/purchase_button" android:layout_weight="1"
+            android:background="@android:color/transparent"/>
 
-        <ImageView
-            android:id="@+id/imagePruchase_all"
+        <ImageButton
+            android:id="@+id/imagePurchase_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_x="180dp"
             android:layout_y="360dp"
-            android:src="@drawable/purchase_all" android:layout_weight="1"/>
+            android:src="@drawable/purchase_all_button" android:layout_weight="1"
+            android:background="@android:color/transparent"/>
 
     </LinearLayout>
 
