--- a/CHIPSApp/res/layout/application_hub.xml
+++ b/CHIPSApp/res/layout/application_hub.xml
@@ -5,9 +5,9 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/applicationHubTopBarGroup">
-        <ImageView android:src="@drawable/settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/applicationHubSettingsButton"></ImageView>
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/applicationHubTopBarPadding"></ImageView>
-        <ImageView android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/applicationHubCreateMealsButton"></ImageView>
+        <ImageButton android:src="@drawable/settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/applicationHubSettingsButton" android:background="@android:color/transparent"/>
+        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/applicationHubTopBarPadding" android:background="@android:color/transparent"/>
+        <ImageButton android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/applicationHubCreateMealsButton" android:background="@android:color/transparent"/>
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center" android:layout_weight="1" android:id="@+id/applicationHubMealDisplayGroup">
         <ImageView android:src="@drawable/bubble_today" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/mealDisplayBubble"></ImageView>
