--- a/CHIPSApp/res/layout/shopping_list.xml
+++ b/CHIPSApp/res/layout/shopping_list.xml
@@ -5,9 +5,9 @@
     android:orientation="vertical" >
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/shoppingListTopBarGroup">
-        <ImageView android:src="@drawable/home" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/shoppingListSettingsButton"></ImageView>
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/shoppingListTopBarPadding"></ImageView>
-        <ImageView android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/shoppingListCreateMealsButton"></ImageView>
+        <ImageButton android:src="@drawable/home" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/shoppingListSettingsButton" android:background="@android:color/transparent" android:onClick="goHomeClicked"/>
+        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/shoppingListTopBarPadding" android:background="@android:color/transparent"/>
+        <ImageButton android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/shoppingListCreateMealsButton" android:background="@android:color/transparent"/>
     </LinearLayout>
     <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/shoppingListGroup" android:layout_weight="1"></LinearLayout>
 
