--- a/CHIPSApp/res/layout/inventory.xml
+++ b/CHIPSApp/res/layout/inventory.xml
@@ -31,7 +31,7 @@
             android:layout_x="184dp"
             android:layout_y="360dp"
             android:src="@drawable/scan_button" android:layout_weight="1"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent" android:onClick="scanBarcodeClicked"/>
 
     </LinearLayout>
 
