Added an abstract activity for home icon and skeleton inventory add

--- a/CHIPSApp/res/layout/inventory.xml
+++ b/CHIPSApp/res/layout/inventory.xml
@@ -22,7 +22,7 @@
             android:layout_x="60dp"
             android:layout_y="360dp"
             android:src="@drawable/add_button" android:layout_weight="1"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent" android:onClick="addFoodToInventoryClicked"/>
 
         <ImageButton
             android:id="@+id/imageScan"
