Removed specific position attributes from buttons

--- a/CHIPSApp/res/layout/preferences.xml
+++ b/CHIPSApp/res/layout/preferences.xml
@@ -119,8 +119,8 @@
     
     <ImageView
         android:id="@+id/imageSave"
-        android:layout_width="97dp"
-        android:layout_height="97dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/save" />
 </LinearLayout>
