--- a/CHIPSApp/res/layout/inventory.xml
+++ b/CHIPSApp/res/layout/inventory.xml
@@ -16,14 +16,16 @@
         android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/inventoryBottomButtonGroup">
 
         <ImageButton
-            android:id="@+id/imageAdd"
+            android:id="@+id/addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/add_button" android:layout_weight="1"
             android:background="@android:color/transparent" android:onClick="addFoodToInventoryClicked"/>
 
+        <ImageButton android:layout_weight="1" android:onClick="searchFoodClicked" android:src="@drawable/search_button" android:id="@+id/ImageButton01" android:background="@android:color/transparent" android:layout_height="wrap_content" android:layout_width="wrap_content"></ImageButton>
+
         <ImageButton
-            android:id="@+id/imageScan"
+            android:id="@+id/scanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/scan_button" android:layout_weight="1"
