--- a/CHIPSApp/res/layout/inventory.xml
+++ b/CHIPSApp/res/layout/inventory.xml
@@ -7,7 +7,7 @@
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/inventoryTopBarGroup">
         <ImageView android:src="@drawable/home" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/inventorySettingsButton" android:onClick="goHomeClicked"></ImageView>
         <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/inventoryTopBarPadding"></ImageView>
-        <ImageView android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/inventoryCreateMealsButton"></ImageView>
+        <ImageView android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/inventoryCreateMealsButton" android:onClick="addFavoriteClicked"></ImageView>
     </LinearLayout>
     <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/inventoryItemGroup" android:layout_weight="1"></LinearLayout>
 
