--- a/CHIPSApp/res/layout/shopping_list.xml
+++ b/CHIPSApp/res/layout/shopping_list.xml
@@ -7,7 +7,7 @@
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/shoppingListTopBarGroup">
         <ImageButton android:src="@drawable/home" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/shoppingListSettingsButton" android:background="@android:color/transparent" android:onClick="goHomeClicked"/>
         <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/shoppingListTopBarPadding" android:background="@android:color/transparent"/>
-        <ImageButton android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/shoppingListCreateMealsButton" android:background="@android:color/transparent"/>
+        <ImageButton android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/shoppingListCreateMealsButton" android:background="@android:color/transparent" android:onClick="addFavoriteClicked"/>
     </LinearLayout>
     <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/shoppingListGroup" android:layout_weight="1"></LinearLayout>
 
