Fixed inflater code

--- a/CHIPSApp/res/layout/top_bar.xml
+++ b/CHIPSApp/res/layout/top_bar.xml
@@ -10,7 +10,7 @@
         <ImageButton android:src="@drawable/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/shoppingListCreateMealsButton" android:background="@android:color/transparent" android:onClick="addFavoriteClicked"/>
     </LinearLayout>
    
-   <!-- <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent" android:orientation="vertical" >
-   </LinearLayout> -->
+   <!--<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/subview" android:layout_weight="1">
+   </LinearLayout>-->
 </LinearLayout>
 
