Naming changes to top bar

--- a/CHIPSApp/res/layout/home_bar.xml
+++ b/CHIPSApp/res/layout/home_bar.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" android:id="@+id/subview" >
+    android:orientation="vertical" android:id="@+id/homeBarMainView" >
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/shoppingListTopBarGroup">
         <ImageButton android:src="@drawable/home" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/shoppingListSettingsButton" android:background="@android:color/transparent" android:onClick="goHomeClicked"/>
