--- a/CHIPSApp/res/layout/preferences.xml
+++ b/CHIPSApp/res/layout/preferences.xml
@@ -110,11 +110,18 @@
 
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:id="@+id/preferencesBottomButtonGroup">
     
-    <ImageView
-        android:id="@+id/imageSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:src="@drawable/save" />
+        <ImageButton
+            android:id="@+id/scanButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:src="@drawable/save_button" />
+     </LinearLayout>
+
 </LinearLayout>
