fixed preferences xml

--- a/CHIPSApp/res/layout/favorites.xml
+++ b/CHIPSApp/res/layout/favorites.xml
@@ -131,7 +131,7 @@ android:layout_height="fill_parent" >
         android:layout_height="wrap_content" android:id="@+id/favoritesBottomButtonGroup">
 
         <ImageButton
-            android:id="@+id/scanButton"
+            android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
